red pen edits up to end of chapter 2

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -491,7 +491,15 @@ Also related is the concept of \textit{involvement}, defined in this context as 
 
 \newcommand{\absencefootnote}{\footnote{\textbf{Absence} is defined as \textit{``a psychological focus on \ldots\ conceptual processing''}~\cite{Waterworth2001}.}}
 
-Waterworth and Waterworth present the \textit{three dimensions of virtual experience} model for visualising and discussing virtual/physical experience in terms of three separate `axes of attention', one of which relates closely to the popular use of the term presence in the wider alternate reality literature~\cite{Waterworth2001}. This division of the concept of virtual/physical experience, which allows the separate consideration of which environment a user is attending to the stimuli of and how \textit{much} they are attending to these stimuli (wherever they may come from), is diagnostic in the investigation of the experience of parallel reality systems that promote the transition between the stimuli of two separate environments, particularly where the concept of the `break in presence' is concerned.
+Waterworth and Waterworth present the \textit{three dimensions of virtual experience} model (included as figure \ref{focus-locus-sensus-original}) for visualising and discussing virtual/physical experience in terms of three separate `axes of attention', one of which relates closely to the popular use of the term presence in the wider alternate reality literature~\cite{Waterworth2001}. This division of the concept of virtual/physical experience, which allows the separate consideration of which environment a user is attending to the stimuli of and how \textit{much} they are attending to these stimuli (wherever they may come from), is diagnostic in the investigation of the experience of parallel reality systems that promote the transition between the stimuli of two separate environments, particularly where the concept of the `break in presence' is concerned.
+
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=.6\textwidth]{focus-locus-sensus-original.png}
+		\caption{The three dimensions of virtual experience model.}
+		\label{focus-locus-sensus-original}
+	\end{center}	
+\end{figure}
 
 In the three dimensions of virtual experience model, the \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from; the \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning and perceptual/concrete processing, where complex conceptual reasoning results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and the \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix of both, or not directed toward any percepts in the case of completely `absent' conceptual reasoning, a concept that is clarified by the authors in a subsequent publication;
 
@@ -515,7 +523,7 @@ With the locus of attention axis representing the environment from which the sti
 	\end{center}	
 \end{figure}
 
-Regarding the combined Milgram/Waterworth model shows more clearly that the balance between presence and absence can relate to any environment upon the locus of attention axis, as confirmed by Waterworth and Waterworth in a subsequent publication;
+Studying the combined Milgram/Waterworth model shows more clearly that the balance between presence and absence can relate to any environment upon the locus of attention axis, as confirmed by Waterworth and Waterworth in a subsequent publication;
 
 \begin{quote}
 	\textit{``We may feel hardly present at all in the physical world (a state we call absence) if nothing is happening there that is of interest or that impacts on our well-being, and so it is with mediated presence.''}~\cite{Waterworth2014}
@@ -534,32 +542,34 @@ Furthermore one can postulate as to the essence of Lifton's vacancy with regard 
 
 \label{transitions_in_parallel_reality}
 
-The novel aspect of PR is the ability it imparts upon its user to switch their locus of attention between equivalent vantage points in RW and VR environments. In order to achieve the highest quality of experience with this style of interaction with a PR system, it is vital to determine how best to implement the transitions; that is, to mitigate the increased cognitive load (manifesting as increased conceptual reasoning and reduced perceptual processing) required to comprehend each transition, as increased cognitive load will detract from engagement with the environments and reduce the user's willingness to perform subsequent transitions.
+The novel aspect of parallel reality is the ability it imparts upon its user to switch their locus of attention between equivalent vantage points in real and virtual environments. In order to achieve the highest quality of experience with this style of interaction with a parallel reality system, it is vital to determine how best to implement the transitions; that is, to mitigate the increased cognitive load (manifesting as increased conceptual reasoning and reduced perceptual processing) required to comprehend each transition, as increased cognitive load will detract from engagement with the environments and reduce the user's willingness to perform subsequent transitions.
 
 %In the systems developed by this thesis the users maintain mobility, such that they can move around the two environments in tandem, thus extending existing XR platforms that featured static locations at which a user in the real environment could see into the virtual and vice-versa. This combination of unhindered mobility with the ability to transition between real and virtual stimuli thus alleviates the vacancy problem.
 
 %This is achieved by the user performing transitions between RW visual stimuli and VR visual stimuli, both presented via their HMD. This extends existing XR research by allowing the user to engage with the visual stimuli of the VR component of a XR system from any position and at any time.
 
-Whilst some researchers support the notion that in systems where more than one environment competes for the user's locus of attention there is an `all or nothing' Gestalt switch between awareness of one environment and the other~\cite{Slater2002}, which would result in a substantial increase in cognitive load upon each transition, the position adopted by this thesis is of the contrary opinion; that switching locus of attention from the stimuli of one environment to those of another does not completely overrule the user's awareness of the former, that both environments can be perceived at the same time (albeit one to a lesser extent)~\cite{Ijsselsteijn2001} and that when engaging with VR content a user's focus can even be said to typically be \textit{shared} between VR and RW~\cite{Waterworth2001}, leading to a notion of `distributed' presence, or simultaneously experiencing a sense of presence in multiple environments.
+Whilst some researchers support the notion that in systems where more than one environment competes for the user's locus of attention there is an `all or nothing' Gestalt switch between awareness of one environment and the other~\cite{Slater2002}, which would result in a substantial increase in cognitive load upon each transition, the position adopted by this thesis is of the contrary opinion; that switching locus of attention from the stimuli of one environment to those of another does not completely overrule the user's awareness of the former, that both environments can be perceived at the same time (albeit one to a lesser extent)~\cite{Ijsselsteijn2001} and that when engaging with virtual content a user's focus can even be said to typically be \textit{shared} between the real and the virtual environments~\cite{Waterworth2001}, leading to a notion of `distributed' presence, or simultaneously experiencing a sense of presence in multiple environments.
 
-This latter position is particularly apt for situations wherein the RW and VR environments share the same fundamental layout and dimensions (spatial equivalence), as those of the PR systems explored within this thesis do, as inherent familiarity between two environments intuitively reduces the cognitive load associated with transitioning between them.
+This latter position is particularly apt for situations wherein the real and virtual environments share the same fundamental layout and dimensions (spatial equivalence), as those of the PR systems explored within this thesis do, as inherent familiarity between two environments intuitively reduces the cognitive load associated with transitioning between them.
 
-Furthermore, the notion of experience of presence as changing continually from moment-to-moment~\cite{Heeter2003, Ijsselsteijn1998} lends confidence to the successful mitigation of the cognitive load associated with these transitions to manageable levels. One might even liken this `switching' between RW and VR to the `cycling through' behaviour observed in users of virtual communities, which stemmed from the `window' concept of modern computer operating systems~\cite{Turkle2004} and accelerated with mobile devices to the point where for many users today rapid cycling stabilizes them into a sense of `continual copresence', where even just a mobile phjjone brings them into a world of continual partial attention to any particular subject or environment~\cite{Turkle2011} - the advent of mobile phones has previously been credited with allowing a person to \textit{``be in many places at once''} and to play multiple roles~\cite{Terashima2001}. The term PolySocial Reality (PoSR) has even been put forward to describe situations of multiplexing of physical reality with Web-based social networks and apps for Internet mediated social interaction~\cite{Applin2012}, and as it has been shown that \textit{``effective interaction among participants is a contributing factor to presence''}~\cite{Terashima2001} the importance of social interaction upon presence should not be understated.
+Furthermore, the notion of experience of presence as changing continually from moment-to-moment~\cite{Heeter2003, Ijsselsteijn1998} lends confidence to the successful mitigation of the cognitive load associated with these transitions to manageable levels. One might even liken this `switching' between real and virtual to the `cycling through' behaviour observed in users of virtual communities, which stemmed from the `window' concept of modern computer operating systems~\cite{Turkle2004} and accelerated with mobile devices to the point where for many users today rapid cycling stabilizes them into a sense of `continual copresence', where even just a mobile phone brings them into a world of continual partial attention to any particular subject or environment~\cite{Turkle2011} - the advent of mobile phones has previously been credited with allowing a person to \textit{``be in many places at once''} and to play multiple roles~\cite{Terashima2001}. The term polysocial Reality was introduced to describe situations like this of multiplexing physical reality with Web-based social networks and apps for Internet mediated social interaction~\cite{Applin2012}, and as it has been shown that \textit{``effective interaction among participants is a contributing factor to presence''}~\cite{Terashima2001} the importance of social interaction upon presence should not be understated.
 
 %HyperReality p148
 
-However, no matter how smooth the transitions, the process is expected to nonetheless result in some heightened cognitive load, a temporary break in presence (BIP), as the user comes to terms with the new environment presented to them and comprehends its relation to the other environment that they were just perceiving. The definition of break in presence adopted herein is the second from Waterworth and Waterworth~\cite{Waterworth2001} (p205): a movement along the focus axis away from presence in the real or a virtual environment and toward absence, which also relates to a reduction in involvement. This differs to Slater and Steed's original definition in~\cite{Slater2000} where they considered presence only in terms of attending to stimuli from a virtual environment, with a break in presence as a Gestalt switch to instead attending to stimuli from the real environment. Waterworth and Waterworth's model considers presence in terms of attending to stimuli from either the real \textit{or a virtual} environment, with a break in presence representing absence in the sense of heightened conceptual load and the resultant reduced perceptual processing of environmental stimuli originating from \textit{either} the real or a virtual environment. This definition better fits the situation invoked by the parallel reality concept, which is concerned with intentionally and willingly switching engagement between stimuli from both real and virtual environments, rather than engaging with stimuli from only a virtual environment in a scenario where stimuli from the real environment are considered a `distraction'.
+However, no matter how smooth the transition, the process is expected to nonetheless result in some heightened cognitive load, a temporary break in presence (BIP), as the user comes to terms with the new environment presented to them and comprehends its relation to the other environment that they were just perceiving. The definition of break in presence adopted herein is the second from Waterworth and Waterworth~\cite{Waterworth2001} (p205): a movement along the focus axis away from presence in the real or a virtual environment and toward absence. This differs to Slater and Steed's original definition in~\cite{Slater2000} where they considered presence only in terms of attending to stimuli from a virtual environment, with a break in presence as a Gestalt switch to instead attending to stimuli from the real environment. Waterworth and Waterworth's model considers presence in terms of attending to stimuli from either the real \textit{or a virtual} environment, with a break in presence representing absence in the sense of heightened conceptual load and the resultant reduced perceptual processing of environmental stimuli originating from \textit{either} the real or a virtual environment. This definition better fits the situation invoked by the parallel reality concept, which is concerned with intentionally and willingly switching engagement between stimuli from both real and virtual environments, rather than engaging with stimuli from only a virtual environment in a scenario where stimuli from the real environment are considered a `distraction'.
 
-Transitions can be implemented in multiple different manners and it is expected that users will prefer different implementations in different situations, surroundings and scenarios (where `preference' toward a particular implementation is expected to correlate with a less severe BIP being experienced upon its execution). To this end, this thesis explores several different transition implementations in order to identify and quantify preferences toward them, to infer which approaches to transitioning between RW and VR visual stimuli are more or less appropriate for the different situations that arise where a platform like those developed by this thesis may be deployed (moving, stationary, etc.).
+This difference between the Steed and Waterworth definitions of break in presence can also be visualised by considering the axes of the three dimensions of virtual experience model. In the Steed definition, a break in presence represents a movement upon the locus of attention axis from the virtual world to the real world. In the second of the Waterworth definitions, a break in presence represents a movement upon the focus of attention axis from presence to absence.
+
+Transitions can be implemented in multiple different manners and it is expected that users will prefer different implementations in different situations, surroundings and scenarios (where `preference' toward a particular implementation is expected to correlate with a less severe break in presence being experienced upon its execution). To this end, this thesis explores several different transition implementations in order to identify and quantify preferences toward them, to infer which approaches to transitioning between real and virtual visual stimuli are more or less appropriate for the different situations that arise where a platform like those developed by this thesis may be deployed (moving, stationary, etc.).
 
 %=========================================================================================================
 
 \subsection{Parallel Reality and the Combined Milgram/Waterworth Model}
-Visualised using the combined Milgram/Waterworth model, the transitions of a PR system are an oscillation along the locus axis between two different positions. Figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition} shows an example where a user performs a smooth transition between a fully RW environment and a fully VR environment.
+Visualised using the combined Milgram/Waterworth model, the transitions of a parallel reality system are an oscillation along the locus of attention axis between two different positions. Figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition} shows an example where a user performs a smooth transition between perceiving stimuli from a fully real environment and a fully virtual environment.
 
-Heightened cognitive load required to comprehend a transition is represented by a temporary movement upon the focus axis from presence toward absence (a BIP). With the ability of a wide FOV, stereoscopic 3D, head-tracked HMD (such as that used by the Mirrorshades platform developed in this thesis) to produce immersive VR visual stimuli that require fairly limited cognitive processing and our inherent ability to engage with our RW surroundings without significant cognitive load, focus is expected to be high (toward the presence extremum) when attending to stimuli from either RW or VR.
+Heightened cognitive load required to comprehend a transition is represented by a temporary movement upon the focus axis from presence toward absence (a break in presence). With the ability of a wide field of view (FOV), stereoscopic 3D, head-tracked head mounted display (HMD) (such as that used by the Mirrorshades platform developed in this thesis) to produce immersive virtual reality visual stimuli that require fairly limited cognitive processing and our inherent ability to engage with our real surroundings without significant cognitive load, focus is represented as being high (toward the presence extreme) when attending to stimuli from either the purely real or purely virtual environment.
 
-Sensus is expected to be largely task dependent, however when performing a task that involves actively engaging with the visual stimuli from either/both of RW or VR it is expected to be high (toward the conscious extremum). Upon triggering a transition, sensus is expected to increase, as the user centres their attention upon relating the visual stimuli from the new environment to those they were just perceiving from the other environment
+Sensus is expected to be largely task dependent, however when performing a task that involves actively engaging with the visual stimuli from either/both of the real and virtual environments it is expected to be high (toward the conscious extreme). Upon triggering a transition, sensus is expected to increase, as the user centres their attention upon relating the visual stimuli from the new environment to those they were just perceiving from the other environment
 
 %Whilst continued exposure to the platform is expected to reduce the severity of the BIPs, mitigating their severity from the outset (reducing the displacement from the presence extremum downwards toward absence) through informed execution of the transitions between RW and VR is believed to be important to the overall quality of experience that users receive.
 
@@ -569,7 +579,7 @@ Sensus is expected to be largely task dependent, however when performing a task 
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=.8\textwidth]{transition-rw-vr.png}
-		\caption{Visualisation using the combined Milgram/Waterworth model of the theorised experience of a user of a PR system performing a slow transition between its constituent RW and VR environments.}
+		\caption{Visualisation using the combined Milgram/Waterworth model of the theorised experience of a user of the Mirrorshades parallel reality system performing a slow transition between its constituent real and virtual environments.}
 		\label{focus-locus-sensus-with-virtuality-continuum-with-transition}
 	\end{center}	
 \end{figure}
@@ -642,21 +652,21 @@ Sensus is expected to be largely task dependent, however when performing a task 
 \label{caseforpr}
 %ARCHEOGUIDE makes the point that AR is good because users are not isolated/completely immersed in a synthetic world - well Mirrorshades allows uers to more fully immerse themselves in a synthetic world, but without becoming isolated in it (eg without becoming ***vacant*** from the real world)
 
-A PR system that presents the user with the choice between visual stimuli from both its constituent environments (RW and VR) allows that user to engage with both real and virtual content in a manner that is similar to, but has a number of advantages over previous alternate reality systems, including traditional AR implementations and XR systems;
+A parallel reality system that presents the user with the choice between visual stimuli from both its constituent environments (real and virtual) allows that user to engage with both real and virtual content in a manner that is similar to, but has a number of advantages over, previous alternate reality systems, including traditional augmented reality implementations and cross reality systems;
 
 \begin{itemize}
-	\item a PR system is less critical of registration (the accurate positioning/alignment) between real and virtual, as virtual objects are seen as part of a larger virtual environment instead of being rendered atop a view of the real environment~\cite{Azuma1997};
-	\item a PR system can make use of existing VR content without the overhead of decanting/extracting a subset of the virtual components into an AR framework (e.g. manually selecting which objects within the VR environment are to be displayed over the RW environment);
-	\item the use of a complete VR environment allows virtual content to be more encompassing and immersive, as presenting a complete VR environment allows total control over lighting, shadows, reflections, particle effects, etc. which would be difficult or impossible for an AR platform to render atop a view of a RW environment.
-	\item the vacancy problem is further addressed, but instead of doing so by linking real and virtual environments by sensor and actuator infrastructure, vacancy in either environment is alleviated by furnishing users with the ability to transition between visual stimuli from each environment.
+	\item a parallel reality system is less critical of registration (the accurate positioning/alignment) between real and virtual, as virtual objects are seen as part of a larger virtual environment instead of being rendered atop a view of the real environment~\cite{Azuma1997};
+	\item a parallel reality system can make use of existing virtual reality content without the overhead of decanting/extracting a subset of the virtual components into an augmented reality framework (e.g. manually selecting which objects within the virtual environment are to be displayed over the real environment);
+	\item the use of a complete virtual environment allows virtual content to be more encompassing and immersive, as presenting a complete virtual environment allows total control over lighting, shadows, reflections, particle effects, etc. which would be difficult or impossible for a combined augmented and diminished reality platform to render atop a view of a real environment.
+	\item the vacancy problem is further addressed, but instead of doing so by linking real and virtual environments by sensor and actuator infrastructure, vacancy in both environments is alleviated by furnishing users with the ability to transition between visual stimuli from both environments.
 \end{itemize}
 
-Thus, a PR platform is well suited to situations in which interaction with the visual stimuli of both real and virtual environments is required and where one or more of the following hold true;
+Thus, a parallel reality platform is well suited to situations in which interaction with the visual stimuli of both real and virtual environments is required and where one or more of the following hold true;
 
 \begin{itemize}
 	\item in lieu of accurate registration between real and virtual, there is a strong focus on the virtual environment's atmosphere and immersion~\cite{deamicis:gamebased};
-	\item there is existing VR content;
-	\item the visual differences between real and virtual environments are so substantial that an AR system would resort to augment (\&/or diminish) almost the whole RW view. While AR \textit{``smears an informational coating over real space''}~\cite{Andersen}, PR presents a complete virtual environment. AR is beneficial where one wishes the juxtaposition of virtual objects upon what is already present in the RW environment, however PR is better suited to situations where one wishes to present a complete virtual alternative.
+	\item there is existing virtual reality content;
+	\item the visual differences between real and virtual environments are so substantial that an augmented reality system would resort to augment (\&/or diminish) almost the whole real view. While augmented reality \textit{``smears an informational coating over real space''}~\cite{Andersen}, parallel reality presents a complete virtual environment. While augmented reality is beneficial where one wishes the juxtaposition of virtual objects upon what is already present in the real environment, parallel reality is better suited in situations wherein one wishes to present a complete virtual alternative.
 \end{itemize}
 
 %=========================================================================================================
@@ -664,6 +674,6 @@ Thus, a PR platform is well suited to situations in which interaction with the v
 \section{Summary}
 Decades of research into alternate realities has furnished us with a rich continuum of approaches and technologies for creating, combining, augmenting and diminishing real and virtual environments. Many of the alternate reality labels that are now becoming commonplace are concerned with presenting a different environment to the user's real surroundings (as in telepresence and virtual reality) or mixing additional information into the user's view of their real or virtual surroundings (as in augmented reality and augmented virtuality).
 
-Although less thoroughly investigated, the concept of creating an alternate reality system by combining two environments, one real and the other virtual and both complete unto themselves, into a cross reality system presents an interesting avenue for furthering alternate reality techniques and applications, in particular to addressing the vacancy problem that affects users when trying to distribute their attention between two environments. Previous cross reality research focussed on alleviating this vacancy problem by integrating sensor and actuator infrastructure into the constituent real and virtual environments of a system, such that actions and events in one environment could manifest into the other. However directly visually engaging with both environments was not often possible in these systems and only from predetermined, static locations.
+Although less thoroughly investigated, the concept of creating an alternate reality system by combining two environments, one real and the other virtual and both complete unto themselves, into a cross reality system presents an interesting avenue for furthering alternate reality techniques and applications, in particular to addressing the vacancy problem that affects users when trying to distribute their attention between two environments. Previous cross reality research has focussed upon alleviating this vacancy problem by integrating sensor and actuator infrastructure into the constituent real and virtual environments of a system, such that actions and events in one environment could manifest into the other. However directly visually engaging with both environments was not often possible in these systems and only from predetermined, static locations.
 
-This thesis introduces parallel reality as a new category of alternate reality that allows its user to visually engage with both a real and a virtual environment, transitioning between them at any point, whilst maintaining mobility to walk through the environments in tandem. In trading the sensor/actuator infrastructure of a cross reality system for direct visual engagement with both environments, the parallel reality concept further addresses the vacancy problem by providing \textit{``the means to be in more than one place (reality) at a time''}\cite{Lifton2007a}.
+Parallel reality has been introduced as a new category of alternate reality that allows its user to visually engage with both a real and a virtual environment, transitioning between them at any time, whilst maintaining mobility to walk through the environments in tandem. In trading the sensor/actuator infrastructure of a cross reality system for direct visual engagement with both environments, the parallel reality concept further addresses the vacancy problem by providing \textit{``the means to be in more than one place (reality) at a time''}\cite{Lifton2007a}.
